第2回課題修正

--- a/20240417/index.html
+++ b/20240417/index.html
@@ -23,12 +23,13 @@
         <div>box</div>
         <div>box</div>
         <div>box</div>
-        <div>box</div>
+
 
 
     </div>
     <h1>見出し</h1>
     <h2>みだし</h2>
+    <h3>見出し３</h3>
 </body>
 
 </html>
