--- a/第2回課題work2竹本亜紀/index.html
+++ b/第2回課題work2竹本亜紀/index.html
@@ -14,12 +14,12 @@
         <div>
             タイトル
         </div>
-        <ul class="menu">
-            <li class="border1">サービス</li>
-            <li class="border2">講師一覧</li>
-            <li class="border3">料金プラン</li>
-            <li class="border4">会社概要</li>
-            <li class="border5">お問い合わせ</li>
+        <ul class="border">
+            <li class="border">サービス</li>
+            <li class="border">講師一覧</li>
+            <li class="border">料金プラン</li>
+            <li class="border">会社概要</li>
+            <li class="border">お問い合わせ</li>
         </ul>
     </header>
 </body>
