第3回課題修正

--- a/第3回課題竹本亜紀/work2/index.html
+++ b/第3回課題竹本亜紀/work2/index.html
@@ -11,35 +11,35 @@
 
 
 <body>
-    <header class="flexbox_header">サービス</header>
+    <h2>サービス</h2>
     <ul>
-        <li>
+        <li class="service_box">
             <div class="flexbox_imgs">
                 <img src="main_1.jpg">
             </div>
             <div class="flexbox_text">
-                <div class="box"></div>
-                <h1>サービス1</h1>
+
+                <h3>サービス1</h3>
                 <p>サービス1サービス1サービス1サービス1サービス1サービス1サービス1</p>
             </div>
         </li>
-        <li>
+        <li class="service_box">
             <div class="flexbox_imgs">
                 <img src="main_2.png">
             </div>
             <div class="flexbox_text">
-                <div class="box"></div>
-                <h1>サービス2</h1>
+
+                <h3>サービス2</h3>
                 <p>サービス2サービス2サービス2サービス2サービス2サービス2サービス2</p>
             </div>
         </li>
-        <li>
+        <li class="service_box">
             <div class="flexbox_imgs">
                 <img src="main_3.png">
             </div>
             <div class="flexbox_text">
-                <div class="box"></div>
-                <h1>サービス3</h1>
+
+                <h3>サービス3</h3>
                 <p>サービス3サービス3サービス3サービス3サービス3サービス3サービス3</p>
             </div>
         </li>
