--- a/第3回課題竹本亜紀/work1/index.html
+++ b/第3回課題竹本亜紀/work1/index.html
@@ -10,13 +10,22 @@
 <body>
 
     <script>
-        let num = 1;
-        for (let i = 0; i < 10; i++)
+
+        let num = 0;
+        for (let i = 0; i < 11; i++) {
+            num += i;//調べた結果これで合っていると思うが、なぜ+=と書くのかピンとこない//
+
+
             if (num > 20) {
                 console.log('20以上')
+                console.log("numの値" + num)
             } if (num < 20) {
                 console.log('20未満')
+                console.log("numの値" + num)
             }
+        }
+
+
     </script>
 
 </body>
