第4回課題修正と疑問点

--- a/第4回課題竹本亜紀/20240501/index.html
+++ b/第4回課題竹本亜紀/20240501/index.html
@@ -24,40 +24,36 @@
                 </h1>
                 <nav class="pc_nav">
                     <ul>
-                        <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">MENU</a></li>
-                        <li><a href="#">GALLERY</a></li>
-                        <li><a href="#">EVENT</a></li>
-                        <li><a href="#">ACCESS</a></li>
+                        <li><a href="#about_us">ABOUT US</a></li>
+                        <li><a href="#menu">MENU</a></li>
+                        <li><a href="#gallery">GALLERY</a></li>
+                        <li><a href="#event">EVENT</a></li>
+                        <li><a href="#access">ACCESS</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
-            <section class="main_top">
-
-                <sup>Have a happy day From a cup of coffee</sup>
-
-                <h2>ハッピーに溢れる１日を<br>
-                    １杯のコーヒーから。</h2>
-
-                <p>毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを淹れ<br>
+            <div class="main_top">
+                <p class="font-size_1">Have a happy day From a cup of coffee</p>
+                <p class="font-size_2">
+                    ハッピーに溢れる１日を<br>
+                    １杯のコーヒーから。</p>
+                <p class="font-size_3">毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを淹れ<br>
                     足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。</p>
-
-            </section>
-
+            </div>
             <section class="about_us">
                 <ul>
                     <li>
-                        <img src="images/about_us@2x-100.jpg" alt="コーヒーの画像">
+                        <img class="about_us_title_img" src="images/pc_about-100.jpg" alt="コーヒーの画像">
                     </li>
                     <li>
-                        <h3 class="main_logo">
-                            <img src="images/about_us@2x.png" alt="ABOUT US">
-                        </h3>
-                        <h4>私たちが提供する<br>
+                        <h2>
+                            <img class="about_us_logo" src="images/about_us@2x.png" alt="ABOUT US">
+                        </h2>
+                        <h3>私たちが提供する<br>
                             こだわりのコーヒー
-                        </h4>
+                        </h3>
                         <p>サービスを提供する上での想いや心かけていることなど、メッ</p>
                         <p>セージを文章で紹介します。サービスを提供する上での想い</p>
                         <p>や心かけていることなど、メッセージを文章で紹介します。サー</p>
@@ -71,28 +67,28 @@
             </section>
 
             <section class="menu">
-                <h3 class="main_logo">
-                    <img src="images/menu@2x.png" alt="MENU">
-                </h3>
-                <ul class="main_menu_container">
+                <h2>
+                    <img src="images/menu@2x.png" alt="MENU" class="menu_title_logo">
+                </h2>
+                <ul>
                     <li>
-                        <img src="images/pc_menu_drink-100.jpg" alt="ドリンクの画像">
-                        <h4>Drink</h4>
+                        <img class="menu_img" src="images/pc_menu_drink-100.jpg" alt="ドリンクの画像">
+                        <h3>Drink</h3>
                         <p>ドリンクメニューの概要を100文字程度で</p>
                         <p>紹介します。素材やこだわりなどをアピー</p>
                         <p>ルしていきます。</p>
                     </li>
                     <li>
-                        <img src="images/pc_menu_food-100.jpg" alt="フードの画像">
-                        <h4>Food</h4>
+                        <img class="menu_img" src="images/pc_menu_food-100.jpg" alt="フードの画像">
+                        <h3>Food</h3>
                         <p>フードメニューの概要を100文字程度で紹
                         <p>介します。素材やこだわりなどをアピールし</p>
                         <p>ていきます。</p>
                         </p>
                     </li>
                     <li>
-                        <img src="images/pc_menu_sweets-100.jpg" alt="スイーツの画像">
-                        <h4>Sweets</h4>
+                        <img class="menu_img" src="images/pc_menu_sweets-100.jpg" alt="スイーツの画像">
+                        <h3>Sweets</h3>
                         <p>スイーツメニューの概要を100文字程度で</p>
                         <p>紹介します。素材やこだわりなどをアピー</p>
                         <p>ルしていきます。</p>
@@ -101,10 +97,10 @@
             </section>
 
             <section class="gallery">
-                <h3>
-                    <img src="images/gallery@2x.png" alt="GALLERY">
-                </h3>
-                <ul>
+                <h2>
+                    <img class="gallery_title_logo" src="images/gallery@2x.png" alt="GALLERY">
+                </h2>
+                <ul class="gallery_img">
                     <li>
                         <img src="images/pc_gallary_05-100.jpg" alt="店内賑わいの画像">
                     </li>
@@ -121,24 +117,23 @@
                     </li>
                 </ul>
             </section>
-            <div class="event">
-                <h3 class="main_logo">
-                    <img src="images/event@2x.png" alt="EVENT">
-                </h3>
+            <section class="event">
+                <h2>
+                    <img class="event_title_logo" src="images/event@2x.png" alt="EVENT">
+                </h2>
                 <dl>
-                    <dt>2020.6.23</dt>
+                    <dt>2020.06.23</dt>
                     <dd>7月はイベント出展のため0/0お休みします</dd>
-                    <dt>202003.15</dt>
+                    <dt>2020.03.15</dt>
                     <dd>春の新商品発売。話題のあのブランドとコラボ</dd>
                     <dt>2020.02.06</dt>
                     <dd>コーヒーの日で30%OFFイベントを開催[3日間限定]</dd>
                 </dl>
-            </div>
-
-            <section>
-                <h3 class="main_logo">
-                    <img src="images/access@2x.png" alt="ACCESS">
-                </h3>
+            </section>
+            <section class="access">
+                <h2>
+                    <img class="access_title_logo" src="images/access@2x.png" alt="ACCESS">
+                </h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25931.294074617916!2d139.692616!3d35.666861999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cb2eb3108d1%3A0xf11cd9b2395b6677!2z5p2x5Lqs6YO95riL6LC35Yy6!5e0!3m2!1sja!2sjp!4v1714967920185!5m2!1sja!2sjp"
                     allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -148,6 +143,7 @@
 
 </body>
 <footer>
+
     <ul class="footer">
         <li>
             <h1 class="footer_logo">
@@ -161,8 +157,14 @@
             <p>MAIL:info@designcafe.tokyo</p>
         </li>
     </ul>
-    <img src="images/to_top@2x.png" alt="ページトップへの画像">
-    <small>©️ 2021 DESIGN CAFE</small>
+    <div>
+        <a href="#head">
+            <img src="images/to_top@2x.png" alt="ページトップへの画像">
+        </a>
+    </div>
+    <div class="copyright">
+        <p>©️ 2021 DESIGN CAFE</p>
+    </div>
 </footer>
 
 </html>
