第4回課題PC版修正と疑問点

--- a/第4回課題竹本亜紀/20240501/index.html
+++ b/第4回課題竹本亜紀/20240501/index.html
@@ -35,8 +35,8 @@
         </header>
         <main>
             <div class="main_top">
-                <p class="font-size_1">Have a happy day From a cup of coffee</p>
-                <p class="font-size_2">
+                <p class="font_size_1">Have a happy day From a cup of coffee</p>
+                <p class="font_size_2">
                     ハッピーに溢れる１日を<br>
                     １杯のコーヒーから。</p>
                 <p class="font-size_3">毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを淹れ<br>
