--- a/第4回課題_2竹本亜紀/20240501/index.html
+++ b/第4回課題_2竹本亜紀/20240501/index.html
@@ -105,7 +105,7 @@
                 </ul>
             </section>
 
-            <section class="flexbox_menu">
+            <section class="menu">
                 <h2>
                     <img src="images/menu@2x.png" alt="MENU" class="menu_title_logo">
                 </h2>
@@ -143,7 +143,9 @@
                     <li>
                         <img src="images/pc_gallary_05-100.jpg" alt="店内賑わいの画像">
                     </li>
-                    <img src="images/pc_gallary_04-100.jpg" alt="コーヒー豆の画像">
+                    <li>
+                        <img src="images/pc_gallary_04-100.jpg" alt="コーヒー豆の画像">
+                    </li>
                     <li>
                         <img src="images/pc_gallary_03-100.jpg" alt="店内の画像">
                     </li>
@@ -179,20 +181,7 @@
                         <a class="event_pc_a" herf="#">コーヒーの日で30%OFFイベントを開催[3日間限定]</a>
                     </li>
                 </ul>
-                <ul class="event_sp">
-                    <li>
-                        <p class="event_sp_p">2020.06.23</p>
-                        <a class="event_sp_a" href="#">7月はイベント出展のため0/0･･･</a>
-                    </li>
-                    <li>
-                        <p class="event_sp_p">2020.03.15</p>
-                        <a class="event_sp_a" href="#">春の新商品発売。話題のあのブランド･･･</a>
-                    </li>
-                    <li>
-                        <p class="event_sp_p">2020.02.06</p>
-                        <a class="event_sp_a" herf="#">コーヒーの日で30%OFFイベントを･･･</a>
-                    </li>
-                </ul>
+
             </section>
             <section class="access">
                 <h2>
