--- a/第4回課題_2竹本亜紀/20240501/index.html
+++ b/第4回課題_2竹本亜紀/20240501/index.html
@@ -5,18 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design cafe</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css"
+        integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
 </head>
 
 <body>
     <div>
-        <header>
+        <header id="head">
             <div class="header_slider">
                 <div>
                     <picture>
                         <source srcset="images/sp_main_vs@2x-100.jpg" media="(max-width: 767px)">
                         <img src="./images/pc_first-100.jpg" alt="店内の様子">
+                    </picture>
+                </div>
+                <div>
+                    <picture>
+                        <source srcset="images/sp_main_vs_2@2x-100.jpg" media="(max-width: 767px)">
+                        <img src="./images/slider_2.jpg" alt="店内の様子">
                     </picture>
                 </div>
             </div>
@@ -53,12 +67,20 @@
                 <p class="font_size_2">
                     ハッピーに溢れる１日を<br>
                     １杯のコーヒーから。</p>
-                <p class="font_size_3">毎日を丁寧に大切に過ごしたい。<br class="br_sp">だからこそ一杯一杯丁寧にコーヒーを淹れ<br>
-                    足を運んでくれるお客さんには落ち着く空間と<br class="br_sp">こだわりのコーヒーを提供したい。</p>
+                <p class="font_size_pc_3">
+                    毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを淹れ<br>
+                    足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。
+                </p>
 
+                <p class="font_size_sp_3">
+                    毎日を丁寧に大切に過ごしたい。<br>
+                    だからこそ一杯一杯丁寧にコーヒーを淹れ<br>
+                    足を運んでくれるお客さんには落ち着く空間と<br>
+                    こだわりのコーヒーを提供したい。
+                </p>
 
             </div>
-            <section class="about_us">
+            <section class="about_us" id="about_us">
                 <ul>
                     <li>
                         <h2 class="about_us_title_sp">
@@ -80,34 +102,15 @@
                         <h3>私たちが提供する<br>
                             こだわりのコーヒー
                         </h3>
-                        <!--疑問点：これ以下の記述末尾をbrに変えたらエラーになります。これもpcとspを分けるやり方ではなく、<br class
-    ="〇〇_sp">をスマホの改行部分に入れ込みCSSでdisplay:none;かblockで表示する様にしたらいいのでしょうか。これもやってみたもののうまくいきませんでした。-->
-                        <!--こんな感じです。<p class="about_us_pc_p">サービスを提供する上での想いや心かけているこ<br class="about_us_sp_p"となど、メッ<br></p>-->
 
-                        <p class="about_us_pc_p">サービスを提供する上での想いや心かけていることなど、メッ</p>
-                        <p class="about_us_pc_p">セージを文章で紹介します。サービスを提供する上での想い</p>
-                        <p class="about_us_pc_p">や心かけていることなど、メッセージを文章で紹介します。サー</p>
-                        <p class="about_us_pc_p">ビスを提供する上での想いや心かけていることなど、メッセー</p>
-                        <p class="about_us_pc_p">ジを文章で紹介します。サービスを提供する上での想いや心</p>
-                        <p class="about_us_pc_p">かけていることなど、メッセージを文章で紹介します。サービス</p>
-                        <p class="about_us_pc_p">を提供する上での想いや心かけていることなど、メッセージを</p>
-                        <p class="about_us_pc_p">文章で紹介します。</p>
-
-                        <p class="about_us_sp_p">
-                            サービスを提供する上での想いや心がけているこ</p>
-                        <p class="about_us_sp_p">となど、メッセージを文章で紹介します。サービスを</p>
-                        <p class="about_us_sp_p">提供する上での想いや心がけていることなど、メッ</p>
-                        <p class="about_us_sp_p">セージを文章で紹介します。サービスを提供する上</p>
-                        <p class="about_us_sp_p">での想いや心がけていることなど、メッセージを文</p>
-                        <p class="about_us_sp_p">章で紹介します。サービスを提供する上での想い</p>
-                        <p class="about_us_sp_p">や心がけていることなど、メッセージを文章で紹介</p>
-                        <p class="about_us_sp_p">します。サービスを提供する上での想いや心がけ</p>
-                        <p class="about_us_sp_p">ていることなど、メッセージを文章で紹介します。</p>
+                        <p class="about_us_p">
+                            サービスを提供する上での想いや心かけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心かけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心かけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心かけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心かけていることなど、メッセージを文章で紹介します。
+                        </p>
                     </li>
                 </ul>
             </section>
 
-            <section class="menu">
+            <section class="menu" id="menu">
                 <h2>
                     <img src="images/menu@2x.png" alt="MENU" class="menu_title_logo">
                 </h2>
@@ -126,9 +129,7 @@
                             <img class="menu_img" src="images/pc_menu_food-100.jpg" alt="フードの画像">
                             <h3>Food</h3>
                         </div>
-                        <p>フードメニューの概要を100文字程度で紹
-                            介します。素材やこだわりなどをアピールし
-                            ていきます。
+                        <p>フードメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
                         </p>
                     </li>
                     <li>
@@ -136,42 +137,49 @@
                             <img class="menu_img" src="images/pc_menu_sweets-100.jpg" alt="スイーツの画像">
                             <h3>Sweets</h3>
                         </div>
-                        <p>スイーツメニューの概要を100文字程度で
-                            紹介します。素材やこだわりなどをアピー
-                            ルしていきます。</p>
+                        <p>スイーツメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。</p>
                     </li>
                 </ul>
             </section>
 
-            <section class="gallery_slider">
+            <section class="gallery_slider" id="gallery">
                 <h2>
                     <img class="gallery_title_logo" src="images/gallery@2x.png" alt="GALLERY">
                 </h2>
                 <ul class="gallery_img_pc">
-                    <li>
-                        <img src="images/pc_gallary_05-100.jpg" alt="店内賑わいの画像">
-                    </li>
-                    <li>
-                        <img src="images/pc_gallary_04-100.jpg" alt="コーヒー豆の画像">
-                    </li>
-                    <li>
-                        <img src="images/pc_gallary_03-100.jpg" alt="店内の画像">
-                    </li>
-                    <li>
-                        <img src="images/pc_gallary_02-100.jpg" alt="店内の画像">
-                    </li>
-                    <li>
-                        <img src="images/pc_gallary_01-100.jpg" alt="コーヒーを淹れている画像">
-
-                    </li>
-                </ul>
-                <ul>
-                    <li class="gallery_img_sp">
-                        <img src="images/pc_gallary_05-100.jpg" alt="店内賑わいの画像">
-                    </li>
+                    <div>
+                        <li>
+                            <img src="images/pc_gallary_05-100.jpg" alt="店内賑わいの画像">
+                        </li>
+                    </div>
+                    <div>
+                        <li>
+                            <img src="images/pc_gallary_04-100.jpg" alt="コーヒー豆の画像">
+                        </li>
+                    </div>
+                    <div>
+                        <li>
+                            <img src="images/pc_gallary_03-100.jpg" alt="店内の画像">
+                        </li>
+                    </div>
+                    <div>
+                        <li>
+                            <img src="images/pc_gallary_02-100.jpg" alt="店内の画像">
+                        </li>
+                    </div>
+                    <div>
+                        <li>
+                            <img src="images/pc_gallary_01-100.jpg" alt="コーヒーを淹れている画像">
+                        </li>
+                    </div>
+                    <div>
+                        <li>
+                            <img src="images/pc_gallary_01-100.jpg" alt="コーヒーを淹れている画像">
+                        </li>
+                    </div>
                 </ul>
             </section>
-            <section class="event">
+            <section class="event" id="event">
                 <h2>
                     <img class="event_title_logo" src="images/event@2x.png" alt="EVENT">
                 </h2>
@@ -191,7 +199,7 @@
                 </ul>
 
             </section>
-            <section class="access">
+            <section class="access" id="access">
                 <h2>
                     <img class="access_title_logo" src="images/access@2x.png" alt="ACCESS">
                 </h2>
@@ -216,7 +224,6 @@
                 <p>MAIL:info@designcafe.tokyo</p>
             </li>
         </ul>
-        <!--スマホ版のページトップ画像の大きさの変え方が分かりませんでした。もう少し小さくしたいです。-->
         <div class="footer_a">
             <a href="#head">
                 <img src="images/to_top@2x.png" alt="ページトップへの画像">
@@ -232,8 +239,47 @@
                 $('.sp_btn').toggleClass('open');
                 $('.sp_nav').fadeToggle();
             })
-        })
+            $('.header_slider').slick({
+                autoplay: true,
+                autoplaySpeed: 2000,
+                dots: true,
+                arrows: false,
+            });
+            $('.gallery_img_pc').slick({
+                autoplay: true,
+                autoplaySpeed: 4000,
+                dots: false,
+                arrows: false,
+                slidesToShow: 5,
+                slidesToScroll: 1,
+                responsive: [
+                    {
+                        breakpoint: 1100,
+                        settings: {
+                            slidesToShow: 3,
+                            slidesToScroll: 3,
+                            infinite: true,
+                            dots: false
+                        }
+                    },
+                    {
+                        breakpoint: 767,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 2
+                        }
+                    },
+                    // 指定したブレイクポイントでslickを無効化するには
+                    // オブジェクトの代わりに settings: "unslick" を指定します。
+                ]
+            });
+        });
+
+
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"
+        integrity="sha512-Ixzuzfxv1EqafeQlTCufWfaC6ful6WFqIz4G+dWvK0beHw0NVJwvCKSgafpy5gwNqKmgUfIBraVwkKI+Cz0SEQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
 
